  in favor of class constants
  (kiesel)
- Deprecated HTTP_* constants, use peer.http.HttpConstants class 
  constants instead.
  (kiesel)
- Removed net.xp_framework.website from ports (now resides in xpadmin
  repository, web/src)
  (friebe)
- Modified package mapping to also work from client to server in 
  remote.protocol.Serializer
  (gelli)

Bugfixes
~~~~~~~~
- Fixed webservices.soap.xp.XPSoapNode class to not fatal when
  serializing stdClass objects.
  (kiesel)
- Fixed com.microsoft.com.COMObject class to work with PHP5 COM
  (friebe)
- Fixed lang.XPClass::getSimpleName() cutting off first character when 
  class name is unqualified
  (friebe)
- Fixed class names for soap generator
  (wagner)
- Fixed endless recursion in text.util.RandomCodeGenerator class
  (kiesel, Tom Geiger)
- Fixed text.util.RandomCodeGenerator not being able to generate codes
  longer than 44 characters
  (friebe)
- Added fix to catch submission of malicious request data in 
  scriptlet.xml.XMLScriptletResponse.
  (kiesel)
- Fixed typo in security.crypto.PrivateKey class
  (Thomas Geiger, Tobias Roth, kiesel)

Features
~~~~~~~~
- Changed io.Folder constructor signature to (string|Folder [, string*])
  (friebe)
- Added a new soap type caster webservices.soap.types.SOAPDecimal
  (wagner)
- Added a new Caster that removes illegal control characters from input 
  strings scriptlet.workflow.casters.ToValidXMLString
  (toennishoff)
- made lang.XPClass support reflection for class constants
  (kiesel)
- org.bugzilla.gateway.BugMessage class now inhertits methods from
  peer.mail.MimeMessage class instead of peer.mail.Message class to
  support file attachments
  (toennishoff)
- Added a setBody() method to peer.mail.MimeMessage class to add more 
  compatibility to peer.mail.Message and to support older bedavior of
  org.bugzilla.gateway.BugMessage class
  (toennishoff)


Version 5.7.2, released 2009-03-27
----------------------------------
SVN version: 12947

Heads up!
~~~~~~~~~